Header level reassignment
Reassigned header levels to make sense when navigating with a Screen Reader. Visuals were maintained by adding classes for particular portions.

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
 				<img id="img-linkedin-header" src="images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp-header" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp." />
+				<img id="img-bandcamp-header" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's Bandcamp." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-header" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account, which is significantly less professional." />
+				<img id="img-tumblr-header" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr blog. This account is significantly less professional." />
 			</a>
 		</div>
 		</div>
@@ -49,7 +49,7 @@
 <!--Embedded reel-->
 	<div id="container-video-reel">
 		<div id="container-reel-text">
-			<p class="small-text"><a class="decorated-links" target="_self" href="https://vimeo.com/882762246?share=copy">An Audio Described version of my reel may be found here.</a></p>
+			<p class="audio-described-reel-text"><a class="decorated-links" target="_self" href="https://vimeo.com/882762246?share=copy">An Audio Described version of my reel may be found here.</a></p>
 		</div>
 		<div style="padding:56.25% 0 0 0;position:relative;">
 			<iframe src="https://player.vimeo.com/video/878763365?badge=0&amp;autopause=0&amp;quality_selector=1&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute; top:0; left:0; width:100%; height:100%;" title="Vimeo Player, Logan's Sound Design Portfolio- 2023"></iframe>
@@ -59,13 +59,13 @@
 	<hr class="main_hr">
 <!--Quick Links-->	
 	<div class="content-quicklinks-group-div">
-		<h2 class="content-quicklinks-group-title" >Quick Links</h2>
+		<h2 class="content-quicklinks-group-title">Quick Links</h2>
 		<div class="content-quick-link-div">
 			<div class="content-quick-link-separator">
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Forza">
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/Forza-Preview.jpg" alt="A preview image for Forza Motorsport, bearing the name, logo, and cover art of the game. The cover art depicts two cars (a yellow Cadillac V-Series.R hypercar and a blue Chevrolet Corvette E-Ray) speeding towards the camera and to the right along a track with red and white curbing and an open blue sky behind." />
-					<h4>Forza Motorsport</h4>
+					<p class="quick-link-text">Forza Motorsport</p>
 				</div>
 				</a>
 			</div>
@@ -73,7 +73,7 @@
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Thesis">
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/Thesis-Preview.jpg" alt="A preview image for my Thesis, showing the two playable characters from the Unity FPS Sample, a slender human in an orange and white spacesuit and a taller brown and black imposing robot with a massive gun arm. Both stand in a rocky alien desert." />
-					<h4>Thesis</h4>
+					<p class="quick-link-text">Thesis</p>
 				</div>
 				</a>
 			</div>
@@ -81,7 +81,7 @@
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#Roboxing">
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/Roboxing-Preview.jpg" alt="A preview image for Roboxing, showing one of the titular robot boxer characters. They float beneath a light in a dimly lit gym, their red and white triangular body giving the appearance of a wrestling singlet. Their red boxing gloves float in front in the ready position, and their lumpy round head floats above the body with two oval eyes neutrally blinking back at the viewer." />
-					<h4>Roboxing</h4>
+					<p class="quick-link-text">Roboxing</p>
 				</div>
 				</a>
 			</div>
@@ -89,7 +89,7 @@
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/games#TriseumLiveLab">
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/Triseum-Preview.jpg" alt="A preview image for Triseum & Live Lab, bearing the Triseum logo. It sits on a circular grid remeniscent of the unit circle, and both of those lay over a blue image of space, as though in a nebula." />
-					<h4>Triseum &#38; LIVE Lab</h4>
+					<p class="quick-link-text">Triseum &#38; LIVE Lab</p>
 				</div>
 				</a>
 			</div>
@@ -97,7 +97,7 @@
 				<a class="undecorated-links" target="_self" href="https://loganhardin.xyz/more#ReaperScripts">
 				<div class="content-quick-link-box">
 					<img id="img-quicklink-prev" src="images/Reaper-Preview.jpg" alt="A preview image for my Reaper Scripts, bearing the Reaper Digital Audio Workstation logo. On a black background, a round, guitar pick shaped form is created from overlapping green, brown, and blue circles. The shape of a white scythe forms in the negative space and stands out in front of the blob." />
-					<h4>Reaper Scripts</h4>
+					<p class="quick-link-text">Reaper Scripts</p>
 				</div>
 				</a>
 			</div>
@@ -108,7 +108,7 @@
 	<div class="content-bio-div">
 		<div class="content-bio-text">
 			<h2 class="remove-top-margin-text">Howdy!</h2>
-			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half Leanessa and our two dogs. Thanks for visiting!<br><br>I currently work with the fantastic folks at Turn 10 Studios on Forza Motorsport. That was my first AAA release, so before that, I got my MFA in Sound Design from the Savannah College of Art &#38; Design and my Bachelor's in Visualization at Texas A&#38;M.<br><br>When I'm not helping make the cars go vroom, I can be found playing video and board games, walking my dogs, watching Formula 1, making music for myself, cooking, or enjoying a beer.</p>
+			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half Leanessa and our two dogs. Thanks for visiting!<br><br>I currently work with the fantastic folks at Turn 10 Studios on Forza Motorsport. That was my first AAA release, so before that, I got my MFA in Sound Design from the Savannah College of Art &#38; Design and my Bachelor's in Visualization at Texas A&#38;M University.<br><br>When I'm not helping make the cars go vroom, I can be found playing video and board games, walking my dogs, watching Formula 1, making music for myself, cooking, or enjoying a beer.</p>
 		</div>
 		<div class="content-bio-img">
 			<img id="img-bio" src="images/Me.jpg" alt="A photo of me, from my wedding! I'm beaming-- a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind large black-framed glasses. I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers and a white french-cuffed shirt rolled up to the elbows, with black suspenders, a black bow tie, and my usual low-swept crisp pompadour haircut. A white carnation clings to one suspender strap."/>
@@ -116,7 +116,7 @@
 	</div>
 	<div class="content-bio-favgames-div">
 		<div class="content-bio-favgames-column-1">
-			<h4 class="remove-top-margin-text">Favorite games lately:</h4>
+			<h3 class="favorites-headers">Favorite games lately:</h3>
 			<ul>
 				<li>Forza Motorsport</li>
 				<li>Morrowind</li>
@@ -127,16 +127,16 @@
 			</ul>
 		</div>
 		<div class="content-bio-favgames-column-2">
-			<h4 class="remove-top-margin-text">Anticipated games:</h4>
+			<h3 class="favorites-headers">Anticipated games:</h3>
 			<ul>
-				<li>Dwarf Fortress (Adventure Mode w/ Graphics)</li>
+				<li>Dwarf Fortress (Adventure Mode)</li>
 				<li>Marathon</li>
 				<li>Haunted Chocolatier</li>
 			</ul>
-			<h6>I don't anticipate many games because I'm behind the curve as it is. So many good ones already out, so many I just don't know about yet!</h6>
+			<p class="small-text">I don't anticipate many games because I'm behind the curve as it is. So many good ones already out, so many I just don't know about yet!</p>
 		</div>
 		<div class="content-bio-favgames-column-3">
-			<h4 class="remove-top-margin-text">Favorite sounding games:</h4>
+			<h3 class="favorites-headers">Favorite sounding games:</h3>
 			<ul>
 				<li>Call of Duty 2</li>
 				<li>Outer Wilds</li>
@@ -153,19 +153,18 @@
 	<footer class="footer-main">
 		<div class="footer-links">
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter-footer" src="images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
+				<img id="img-twitter-footer" src="images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter profile." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
 				<img id="img-linkedin-footer" src="images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp-footer" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
+				<img id="img-bandcamp-footer" src="images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's Bandcamp." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-footer" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
+				<img id="img-tumblr-footer" src="images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr blog. This account is significantly less professional." />
 			</a>
 		</div>
-		<!--<p><a href="mailto:loganhardin.sound@gmail.com">loganhardin.sound@gmail.com</a></p>-->
 		<p>©2023 by Logan Hardin</p>
 	</footer>
 </div>
