--- a/more/index.html
+++ b/more/index.html
@@ -68,13 +68,13 @@
 				<p>Making Regions less tedious.<br><br>Currently makes a region for every selected media item, named after and assigned to its track. Further plans include adding a GUI, more options for names and region matrix assignments, and also better naming/numbering.</p>
 			</div>
 			<div class="project-content-right">
-				<img class="img-reascript-gif" src="../images/ReaScripts_Regions_Util.gif" alt="A gif depicting the Region Utility script in action. The names of two tracks are shown, followed by the user selecting two media items, and running the script, after which each item has a region created bounding each item named after the tracks." />
+				<img class="img-reascript-gif" src="../images/ReaScripts_Regions_Util.gif" alt="A gif depicting the Region Utility script in action. The names of two tracks are shown. The user selects two media items, one on each track, and runs the script, which creates a region for each with the track names." />
 			</div>
 		</div>
 		<hr class="minor_hr">
 		<div class="project-div">
 			<div class="project-content-left">
-				<img class="img-reascript-gif" src="../images/ReaScripts_SnapToEndOfMediaItems.gif" alt="A gif depicting the Snap To End of Media Items script in action. Two media items, with ends before and after a grid line, are selected. When the script is run, the two items' ends snap to the same grid line." />
+				<img class="img-reascript-gif" src="../images/ReaScripts_SnapToEndOfMediaItems.gif" alt="A gif depicting the Snap To End of Media Items script in action. Two media items are selected with ends near a grid line. The script runs and both items snap to the same grid line." />
 			</div>
 			<div class="project-content-right">
 				<h3 class="subproject-title">Snap End of Media Items</h3>
@@ -88,7 +88,7 @@
 				<p>For adjusting Region names en masse.<br><br>Largely edited from Acendan's region enumeration script, and similar to the ReaPack standards Find And Replace in Regions/Markers (also written by Acendan). Please go look at his scripts and other work, especially with the UCS.</p>
 			</div>
 			<div class="project-content-left">
-				<img class="img-reascript-gif" src="../images/ReaScripts_RegionPrefixSuffix.gif" alt="A gif depicting the Region Utility script in action. The names of two tracks are shown, followed by the user selecting two media items, and running the script, after which each item has a region created bounding each item named after the tracks." />
+				<img class="img-reascript-gif" src="../images/ReaScripts_RegionPrefixSuffix.gif" alt="A gif depicting the Region Prefix/Suffix script in action. Three regions are shown with enumerated names. Different groupings have the words <q>Prefix</q> and <q>Suffix</q> added to their beginnings and ends respectively." />
 			</div>
 		</div>
 	</div>
@@ -98,7 +98,7 @@
 	<h2 class="project-title">Solar Science</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">Kerbal Space Program Mod.<br>Praise the Sun!<br><br>This was a project I originally undertook during my senior year of high school as a directed study. I modeled, textured, animated, and scripted two new experiment parts, based upon those aboard NASA's real SOHO and STEREO missions. Over the years I made small additions, such as experiment requirements, custom sfx, and loading real-time images from NASA's feeds when the experiment is run. As KSP is made in Unity, I used it and C# extensively.</p>
+				<p class="remove-top-margin-text">Kerbal Space Program Mod.<br>Praise the Sun!<br><br>This was a project I originally undertook during my senior year of high school as a directed study. I modeled, textured, animated, and scripted two new experiment parts, based upon those aboard NASA's real <a class="decorated-links" target="_self" href="https://soho.nascom.nasa.gov/">SOHO</a> and <a class="decorated-links" target="_self" href="https://stereo.gsfc.nasa.gov/">STEREO</a> missions. Over the years I made small additions, such as experiment requirements, custom sound effects, and loading real-time images from NASA's feeds when the experiment is run. As KSP is made in Unity, I used it and C# extensively.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/3WlT3HZsg2U" title="YouTube video, review for Solar Science mod" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -115,11 +115,11 @@
 		<h2 class="project-title">Sound Redesigns</h2>
 		<div class="project-div">
 			<div class="project-content-left">
-				<h3 class="subproject-title">Halo 3: ODST</h3>
+				<h3 class="subproject-title" id="Redesign-Halo3ODST">Halo 3: ODST</h3>
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/HdBcm-ChUrU" title="YouTube video, Sound Redesign for Halo 3: ODST" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
-				<h3 class="subproject-title">Halo 5 Trailer (Rescore)</h3>
+				<h3 class="subproject-title" id="Redesign-Halo5Trailer">Halo 5 Trailer (Rescore)</h3>
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/UsHMSY8uVgQ?si=ljpiKKhqUZm3-F2h" title="YouTube video, Music Rescore for Halo 5 Trailer" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
@@ -149,19 +149,18 @@
 	<footer class="footer-main">
 		<div class="footer-links">
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter-footer" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
+				<img id="img-twitter-footer" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter profile." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
 				<img id="img-linkedin-footer" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp-footer" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
+				<img id="img-bandcamp-footer" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's Bandcamp." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-footer" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
+				<img id="img-tumblr-footer" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr blog. This account is significantly less professional." />
 			</a>
 		</div>
-		<!--<p><a href="mailto:loganhardin.sound@gmail.com">loganhardin.sound@gmail.com</a></p>-->
 		<p>©2023 by Logan Hardin</p>
 	</footer>
 </div>
