--- a/games/index.html
+++ b/games/index.html
@@ -51,7 +51,7 @@
 	<hr class="main_hr">
 		<h2 class="project-title">Forza Motorsport</h2>
 		<div class="project-div">
-			<h5>Turn 10 Studios | Sound Designer</h5>
+			<h3 class="project-subtitle-text">Turn 10 Studios | Sound Designer</h3>
 			<div class="project-content-left">
 				<p class="remove-top-margin-text">See you at the starting line!<br><br>I joined the Turn 10 audio team as a Summer Apprentice in 2021 and was thrilled to help bring Forza Motorsport to across the finish line to the world.</p>
 				<p>I worked with a little bit of everything on the project at one point or another (except the cars) with just about every tool in Turn 10's chest (FMOD Studio, Perforce, 3DS Max, and a wide variety of in-house tools).</p>
@@ -106,7 +106,7 @@
 	<hr class="main_hr">
 		<h2 class="project-title">Thesis</h2>
 		<div class="project-div">
-			<h5>Savannah College of Art &#38; Design | MFA in Sound Design</h5>
+			<h3 class="project-subtitle-text">Savannah College of Art &#38; Design | MFA in Sound Design</h3>
 			<div class="project-content-left">
 				<p class="remove-top-margin-text">Prioritize, Produce, Playtest: Iterative Audio Systems Design in Modern Video Games.<br><br>For my thesis, I practiced and wrote about my discipline: the job of the Technical Sound Designer. To do so I expanded on Unity's 2018 FPS Sample project, re-implementing the audio via FMOD Studio and expanding further on certain systems using C#.<br><br></p>
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/4WZWqboFIuA" title="YouTube video, demonstration of Logan's thesis on technical sound design. This video is not accessible, relying on baked-in captions." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
@@ -124,7 +124,7 @@
 	<hr class="main_hr">
 		<h2 class="project-title">Roboxing</h2>
 		<div class="project-div">
-			<h5>Husky Game Development | Audio Designer</h5>
+			<h3 class="project-subtitle-text">Husky Game Development | Audio Designer</h3>
 			<div class="project-content-left">
 				<p class="remove-top-margin-text">Arcade-style, 1v1 Robot boxing.<br><br>This project was made with my friend <a class="decorated-links" target="_self" href="https://www.linkedin.com/in/tyler-eichten/">Tyler Eichten</a> in collaboration with <a class="decorated-links" href="https://huskygames.com/">Husky Game Development</a> at Michigan Tech University. Originally built for an arcade cabinet, we later adapted it to work with Xbox-style controllers. The game was written in Unity, integrated with FMOD Studio, and used Github for version control.</p>
 			</div>
@@ -143,7 +143,7 @@
 	<hr class="main_hr">
 		<h2 class="project-title">Triseum &#38; LIVE Lab</h2>
 		<div class="project-div">
-			<h5>Texas A&#38;M University | Sound Designer</h5>
+			<h3 class="project-subtitle-text">Texas A&#38;M University | Sound Designer</h3>
 			<div class="project-content-left">
 				<p class="remove-top-margin-text">Games for education and research.<br><br>During my undergrad, I worked with the <a class="decorated-links" href="https://pvfa.tamu.edu/research/live-lab/">Learning Interactive Visualization Experience (LIVE) Lab,</a> an educational research lab focused on game-based learning. I additionally was contracted to do music composition work for <a class="decorated-links" href="https://triseum.com/">Triseum LTD,</a> a close developer partner of the LIVE Lab in Bryan, TX, known for their higher-level education game series.</p>
 			</div>
@@ -162,7 +162,7 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">The House Where They Dwell</h3>
-				<h5>Half-Brain Games | Audio Director</h5>
+				<h4 class="project-subtitle-text">Half-Brain Games | Audio Director</h4>
 				<p>The horror was supposed to be staged.<br><br>The House Where They Dwell is a first-person cooperative game where you and your ghost-hunting TV show crew escape the house, built in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Git. I was the Audio Director and audio dev, working with a team of 5 to produce and implement the score, VO, sound effects, and audio vision.<br><br>The largest challenges we faced were from sheer audio scope, with the variety of enemies, items, and interactions (let alone split-screen). I'm most proud of the physics and the VO.</p>
 			</div>
 			<div class="project-content-right">
@@ -177,7 +177,7 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">Sumra</h3>
-				<h5>DASE Games | Sound Designer</h5>
+				<h4 class="project-subtitle-text">DASE Games | Sound Designer</h4>
 				<p>Spring will come again.<br><br>Sumra is a first-person atmospheric puzzle game that my good friend Brittany Johnson and I were "outsourced" for. It was developed completely in Unreal Engine 4 (native audio engine and Blueprints) and version controlled with Perforce. My primary focus was environment and item interactions, as well as general implementation and rough attempts to work with linear in-engine cinematics. For our efforts, we won an award for Best Game Sound at SCAD's 2020 Entelechy Awards.</p>
 			</div>
 			<div class="project-content-right">
@@ -191,7 +191,7 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title">FooFarYall</h3>
-				<h5>The Good, The Bad, &#38; The Howdy | Audio Person</h5>
+				<h4 class="project-subtitle-text">The Good, The Bad, &#38; The Howdy | Audio Person</h4>
 				<p>Crying over spilled milk.<br><br>A silly Western game, made for <a class="decorated-links" href="https://chillennium.com/">Chillennium Game Jam</a> with Unity and played on one keyboard. All music was recorded &#38; edited on-site. For our efforts we won the award for Special Recognition in Sound; this project directly led to me pursuing Game Audio as a career, and to my involvement with <a class="decorated-links" href="https://loganhardin.xyz/games/#TriseumLiveLab">Triseum &#38; the LIVE Lab.</a></p>
 				<iframe title="Bandcamp audio player, Walking Gait from FooFarYall original Soundtrack" style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=2691759572/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
 				<iframe title="Bandcamp audio player, Hot on the Trail from FooFarYall original Soundtrack" style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=2752376034/size=small/bgcol=333333/linkcol=ffffff/track=382131293/transparent=true/" seamless><a href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Hardin: A collection of things done for reasons by Logan Hardin</a></iframe>
@@ -208,19 +208,18 @@
 	<footer class="footer-main">
 		<div class="footer-links">
 			<a class="undecorated-links" target="_self" href="https://twitter.com/Snoopy_20111">
-				<img id="img-twitter-footer" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter page." />
+				<img id="img-twitter-footer" src="../images/icon_twitter.svg" alt="Twitter Logo and link to Logan's Twitter profile." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.linkedin.com/in/logan-hardin-b5a3a3139/">
 				<img id="img-linkedin-footer" src="../images/icon_linkedin.svg" alt="LinkedIn logo and link to Logan's LinkedIn page." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://snoopy20111.bandcamp.com/">
-				<img id="img-bandcamp-footer" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's old Bandcamp. Following this link is not advised." />
+				<img id="img-bandcamp-footer" src="../images/icon_bandcamp.svg" alt="Bandcamp logo and link to Logan's Bandcamp." />
 			</a>
 			<a class="undecorated-links" target="_self" href="https://www.tumblr.com/snoopy20111">
-				<img id="img-tumblr-footer" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr account. This is significantly less professional, listener discretion is advised." />
+				<img id="img-tumblr-footer" src="../images/icon_tumblr.svg" alt="Tumblr logo and link to Logan's Tumblr blog. This account is significantly less professional." />
 			</a>
 		</div>
-		<!--<p><a href="mailto:loganhardin.sound@gmail.com">loganhardin.sound@gmail.com</a></p>-->
 		<p>©2023 by Logan Hardin</p>
 	</footer>
 </div>
