--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<a class="skip-to-content-link-top" href="#container-video-reel">Jump to content</a>
 <!--Header (stationary)-->
 	<div class="header-hero">
-		<img id="img-home" src="images/Logo_Home.svg" alt="Logan's logo. On a black background, a white rounded rectangle sits at an angle, with blocks and thin parallel lines inside it resembling faders on a mixing board." />
+		<img id="img-home" src="images/Logo_Home.svg" alt="Logo for Logan Hardin. On a black background, a white rounded rectangle sits at an angle, with blocks and thin parallel lines inside it resembling faders on a mixing board." />
 		<div class="header-hero-text-and-div">
 			<h1 id="container-header-text">Logan Hardin</h1>
 			<hr id="container-header-hr">
