Forza Video Block formatting
Adjusted Forza section from having a bunch of left/right subprojects (video + text) to just videos. These are still placeholders but I will fill them in the forthcoming commits with relevant video captures, and eventually some proper explainer videos.

--- a/games/index.html
+++ b/games/index.html
@@ -63,41 +63,20 @@
 		<hr class="minor_hr">
 		<div class="project-div">
 			<div class="project-content-left">
-				<h3 class="subproject-title">Reactive Cockpit Audio</h3>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Magna etiam tempor orci eu lobortis elementum nibh. Ac turpis egestas sed tempus urna et.</p>
+				<h3 class="subproject-title-block">Reactive Cockpit Audio</h3>
+				<iframe class="project-video-embed-block" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<h3 class="subproject-title-block">Audio Description</h3>
+				<iframe class="project-video-embed-block" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
-		</div>
-		<hr class="minor_hr">
-		<div class="project-div">
 			<div class="project-content-left">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+				<h3 class="subproject-title-block">UI &#38; Cinematics</h3>
+				<iframe class="project-video-embed-block" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
-				<h3 class="subproject-title">Audio Description</h3>
-				<p>Eget mauris pharetra et ultrices. Amet venenatis urna cursus eget. Morbi tristique senectus et netus et. Justo donec enim diam vulputate ut pharetra sit amet aliquam.</p>
-			</div>
-		</div>
-		<hr class="minor_hr">
-		<div class="project-div">
-			<div class="project-content-left">
-				<h3 class="subproject-title">UI &#38; Cinematics</h3>
-				<p>Risus viverra adipiscing at in tellus integer. Nullam non nisi est sit amet facilisis magna etiam. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras tincidunt lobortis.</p>
-			</div>
-			<div class="project-content-right">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-			</div>
-		</div>
-		<hr class="minor_hr">
-		<div class="project-div">
-			<div class="project-content-left">
-				<iframe class="project-video-embed" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-			</div>
-			<div class="project-content-right">
-				<h3 class="subproject-title">Track Audio</h3>
-				<p>Sem fringilla ut morbi tincidunt augue interdum. Orci ac auctor augue mauris. Laoreet id donec ultrices tincidunt arcu non sodales neque sodales. Pharetra massa massa ultricies mi quis hendrerit dolor magna eget.</p>
+				<h3 class="subproject-title-block">Track Audio</h3>
+				<iframe class="project-video-embed-block" src="https://www.youtube.com/embed/T7aVUqmQ_Sc" title="YouTube video, Forza Motorsport Blind Driving Assists" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 		</div>
 	</div>
