Updated Forza text
Fixed a typo and trimmed a preposition

--- a/games/index.html
+++ b/games/index.html
@@ -53,7 +53,7 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Turn 10 Studios | Sound Designer</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">See you at the starting line!<br><br>I joined the Turn 10 audio team as a Summer Apprentice in 2021 and was thrilled to help bring Forza Motorsport to across the finish line to the world.</p>
+				<p class="remove-top-margin-text">See you at the starting line!<br><br>I joined the Turn 10 audio team as a Summer Apprentice in 2021 and was thrilled to help bring Forza Motorsport across the finish line.</p>
 				<p>I worked with a little bit of everything on the project at one point or another (except the cars) with just about every tool in Turn 10's chest (FMOD Studio, Perforce, 3DS Max, and a wide variety of in-house tools).</p>
 			</div>
 			<div class="project-content-right">
