Forza- Added Reactive Cockpit video
Also put a bunch of line breaks in the "Coming Soon" text to maintain formatting properly.

--- a/games/index.html
+++ b/games/index.html
@@ -64,7 +64,7 @@
 		<div class="project-div">
 			<div class="project-content-left">
 				<h3 class="subproject-title-block">Reactive Cockpit Audio</h3>
-				<p>[Coming soon...]</p>
+				<iframe class="project-video-embed-block" src="https://www.youtube.com/embed/kjj0ttwLEU4" title="YouTube video, Forza Motorsport Reactive Cockpit Audio. This video relies on subtitles and is not fully accessible, but a future voiced-over version will be." frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
 			<div class="project-content-right">
 				<h3 class="subproject-title-block">Audio Description</h3>
@@ -72,11 +72,11 @@
 			</div>
 			<div class="project-content-left">
 				<h3 class="subproject-title-block">UI &#38; Cinematics</h3>
-				<p>[Coming soon...]</p>
+				<p>[Coming soon...]<br><br><br><br><br><br><br><br><br><br></p>
 			</div>
 			<div class="project-content-right">
 				<h3 class="subproject-title-block">Track Audio</h3>
-				<p>[Coming soon...]</p>
+				<p>[Coming soon...]<br><br><br><br><br><br><br><br><br><br></p>
 			</div>
 		</div>
 	</div>
