Updated Main Forza Text
Made it clear I wasn't an intern for the whole 2 years, and added a short linked list for awards and nominations.

--- a/games/index.html
+++ b/games/index.html
@@ -53,12 +53,19 @@
 		<div class="project-div">
 			<h3 class="project-subtitle-text">Turn 10 Studios | Sound Designer</h3>
 			<div class="project-content-left">
-				<p class="remove-top-margin-text">See you at the starting line!<br><br>I joined the Turn 10 audio team as a Summer Apprentice in 2021 and was thrilled to help bring Forza Motorsport across the finish line.</p>
-				<p>I worked with a little bit of everything on the project at one point or another (except the cars) with just about every tool in Turn 10's chest (FMOD Studio, Perforce, 3DS Max, and a wide variety of in-house tools).</p>
+				<p class="remove-top-margin-text">See you at the starting line!<br><br>I joined the Turn 10 audio team as a Summer Apprentice in 2021 and as a Sound Designer that Autumn. I was thrilled to help bring Forza Motorsport across the finish line!</p>
+				<p>I worked with a bit of everything on the project except car engines, with practically every tool in Turn 10's chest, including FMOD Studio, 3DS Max, Perforce, and a plethora of in-house tools.</p>
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/em4gv1Ietko" title="YouTube video, Forza Motorsport 2023 Trailer, without Audio Description" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 			</div>
+		</div>
+		<div class="project-div-singlecolumn">
+			<p>Since release, we've been proud to receive the following honors:</p>
+			<ul>
+				<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/innovation-in-accessibility">The Game Awards: Innovation in Accessibility (Nomination)</a></li>
+				<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/best-sports-racing">The Game Awards: Best Sports/Racing (Nomination)</a></li>
+			</ul>
 		</div>
 		<hr class="minor_hr">
 		<div class="project-div">
