Added Fun Facts
They are as objective as it gets.

--- a/index.html
+++ b/index.html
@@ -108,7 +108,13 @@
 	<div class="content-bio-div">
 		<div class="content-bio-text">
 			<h2 class="remove-top-margin-text">Howdy!</h2>
-			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half Leanessa and our two dogs. Thanks for visiting!<br><br>I currently work with the fantastic folks at Turn 10 Studios on Forza Motorsport. That was my first AAA release, so before that, I got my MFA in Sound Design from the Savannah College of Art &#38; Design and my Bachelor's in Visualization at Texas A&#38;M University.<br><br>When I'm not helping make the cars go vroom, I can be found playing video and board games, walking my dogs, watching Formula 1, making music for myself, cooking, or enjoying a beer.</p>
+			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half Leo, and our two dogs. Thanks for visiting!<br><br>I currently work with the fantastic folks at Turn 10 Studios on Forza Motorsport, which has been my first AAA release. Before that, I got my MFA in Sound Design from the Savannah College of Art &#38; Design and my Bachelor's in Visualization at Texas A&#38;M University.<br><br>When I'm not helping make the cars go vroom, I can be found playing video and board games, walking my dogs, watching Formula 1, making music for myself, cooking, or enjoying a beer.</p>
+			<h3 class="favorites-headers">Some additional fun facts:</h3>
+			<ul>
+				<li>I start to sound like the people I'm talking to in a matter of minutes.</li>
+				<li>My dogs collectively have 3 working eyes and 2 working ears.</li>
+				<li>Pineapple belongs on pizza. This is not about me, it is a fact.</li>
+			</ul>
 		</div>
 		<div class="content-bio-img">
 			<img id="img-bio" src="images/Me.jpg" alt="A photo of me, from my wedding! I'm beaming-- a huge grin is hardly hidden by my short beard and mustache, and my eyes smile out from behind large black-framed glasses. I'm seated outdoors on a white chair in mostly-formal dress, clad in gray trousers and a white french-cuffed shirt rolled up to the elbows, with black suspenders, a black bow tie, and my usual low-swept crisp pompadour haircut. A white carnation clings to one suspender strap."/>
