--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 	<div class="content-bio-div">
 		<div class="content-bio-text">
 			<h2 class="remove-top-margin-text">Howdy!</h2>
-			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half Leo, and our two dogs. Thanks for visiting!<br><br>I currently work with the fantastic folks at Turn 10 Studios on Forza Motorsport, which has been my first AAA release. Before that, I got my MFA in Sound Design from the Savannah College of Art &#38; Design and my Bachelor's in Visualization at Texas A&#38;M University.<br><br>When I'm not helping make the cars go vroom, I can be found playing video and board games, walking my dogs, watching Formula 1, making music for myself, cooking, or enjoying a beer.</p>
+			<p>I'm a Sound Designer from Belton, TX, currently living in Minneapolis, MN with my better half, Leo, and our two dogs. Thanks for visiting!<br><br>I currently work with the fantastic folks at Turn 10 Studios on Forza Motorsport, which has been my first AAA release. Before that, I got my MFA in Sound Design from the Savannah College of Art &#38; Design and my Bachelor's in Visualization at Texas A&#38;M University.<br><br>When I'm not helping make the cars go vroom, I can be found playing video and board games, walking my dogs, watching Formula 1, making music for myself, cooking, or enjoying a beer.</p>
 			<h3 class="favorites-headers">Some additional fun facts:</h3>
 			<ul>
 				<li>I start to sound like the people I'm talking to in a matter of minutes.</li>
