Text Content edits
+Added to FooFarYall
-Simplified In Living Color

--- a/games/index.html
+++ b/games/index.html
@@ -184,7 +184,7 @@
 			</div>
 			<div class="project-content-right">
 				<iframe class="project-video-embed" src="https://www.youtube.com/embed/C72M7S4osKU?si=jCPjNNMdQOeOqWbV" title="YouTube video, FooFarYall gameplay" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-				<p>You can find both tracks on my <a class="decorated-links" href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Bandcamp album of miscellaneous tracks,</a> and try the game with a friend if you like. </p>
+				<p>You can find both tracks on my <a class="decorated-links" href="https://snoopy20111.bandcamp.com/album/hardin-a-collection-of-things-done-for-reasons">Bandcamp album of miscellaneous tracks,</a> and try the game with a friend if you like. As the product of 48 hours, it's not super deep, and my skills have only gone up from here, but it was a <i>lot</i> of fun to make.</p>
 				<a class="download-button-link" target="_self" href="https://embyrs.itch.io/foofaryall">Download on Itch.io</a>
 			</div>
 		</div>
