--- a/more/index.html
+++ b/more/index.html
@@ -132,10 +132,10 @@
 			<div class="project-content-left">
 				<p class="remove-top-margin-text">This project was a re-interpretation of Van Gogh's famous Sunflower series of paintings.</p>
 				<ul>
-					<li>Musically, each painting was assigned a key on the circle of 5ths, based on their respective "darkness" of scale/color.</li>
-					<li>Each key had a handful of guitar passages assigned, which were improvised based on the codes of the most common hex colors, backed with a soft synth pad for atmosphere.</li>
-					<li>The chances of each passage playing corresponded to their color's frequency in the painting. Every so often the key and underlying painting would change as well.</li>
-					<li>Visually, each of the paintings would be reduced to the most common colors stretched to the window's size, and when a crummy beat detector found a "beat," it would create or destroy <a class="decorated-links" href="https://en.wikipedia.org/wiki/Voronoi_diagram">voronoi shapes,</a> sampling the colors beneath.</li>
+					<li>Each painting was assigned a key on the circle of 5ths, based on their respective "darkness" of scale/color.</li>
+					<li>Each key had a handful of guitar passages assigned, improvised from the codes of the most common hex colors in that work.</li>
+					<li>The chances of each passage playing corresponded to their color's frequency in the painting, and occassionally the key/painting would change.</li>
+					<li>Each of the paintings were reduced to the most common colors, and when a crummy beat detector found a "beat," it would create or destroy <a class="decorated-links" href="https://en.wikipedia.org/wiki/Voronoi_diagram">voronoi shapes,</a> sampling the colors beneath.</li>
 				</ul>
 				<p></p>
 			</div>
