--- a/games/index.html
+++ b/games/index.html
@@ -65,6 +65,10 @@
 			<ul>
 				<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/innovation-in-accessibility">The Game Awards: Innovation in Accessibility (Nomination)</a></li>
 				<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/best-sports-racing">The Game Awards: Best Sports/Racing (Nomination)</a></li>
+				<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">GAConf: AAA Excellence (Nomination)</a></li>
+				<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">GAConf: Best Physical/Mobility Accessibility (Nomination)</a></li>
+				<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">GAConf: Best Blind/Low-Vision Accessibility (Nomination)</a></li>
+				<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">GAConf: Greatest Accessibility Innovation (Nomination)</a></li>
 			</ul>
 		</div>
 		<hr class="minor_hr">
