Unordered List formatting
Added formatting to properly handle unordered lists, in my favorites on the home page and particularly nested lists on my Games > Forza page.

--- a/games/index.html
+++ b/games/index.html
@@ -63,12 +63,21 @@
 		<div class="project-div-singlecolumn">
 			<p>Since release, we've been proud to receive the following honors:</p>
 			<ul>
-				<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/innovation-in-accessibility">The Game Awards: Innovation in Accessibility (Nomination)</a></li>
-				<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/best-sports-racing">The Game Awards: Best Sports/Racing (Nomination)</a></li>
-				<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">GAConf: AAA Excellence (Nomination)</a></li>
-				<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">GAConf: Best Physical/Mobility Accessibility (Nomination)</a></li>
-				<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">GAConf: Best Blind/Low-Vision Accessibility (Nomination)</a></li>
-				<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">GAConf: Greatest Accessibility Innovation (Nomination)</a></li>
+				<li>The Game Awards:
+					<ul class="ul-forza-awards">
+						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/innovation-in-accessibility">Innovation in Accessibility (Nomination)</a></li>
+						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/best-sports-racing">Best Sports/Racing (Nomination)</a></li>
+						
+					</ul>
+				</li>
+				<li>GAConf:
+					<ul class="ul-forza-awards">
+						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">AAA Excellence (Nomination)</a></li>
+						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Best Physical/Mobility Accessibility (Nomination)</a></li>
+						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Best Blind/Low-Vision Accessibility (Nomination)</a></li>
+						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Greatest Accessibility Innovation (Nomination)</a></li>
+					</ul>
+				</li>
 			</ul>
 		</div>
 		<hr class="minor_hr">
