--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 	<div class="content-bio-favgames-div">
 		<div class="content-bio-favgames-column-1">
 			<h3 class="favorites-headers">Favorite games lately:</h3>
-			<ul>
+			<ul class="ul-favorites-list">
 				<li>Forza Motorsport</li>
 				<li>Morrowind</li>
 				<li>Dredge</li>
@@ -134,7 +134,7 @@
 		</div>
 		<div class="content-bio-favgames-column-2">
 			<h3 class="favorites-headers">Anticipated games:</h3>
-			<ul>
+			<ul class="ul-favorites-list">
 				<li>Dwarf Fortress (Adventure Mode)</li>
 				<li>Marathon</li>
 				<li>Haunted Chocolatier</li>
@@ -143,7 +143,7 @@
 		</div>
 		<div class="content-bio-favgames-column-3">
 			<h3 class="favorites-headers">Favorite sounding games:</h3>
-			<ul>
+			<ul class="ul-favorites-list">
 				<li>Call of Duty 2</li>
 				<li>Outer Wilds</li>
 				<li>Battlefield (3 and 1943)</li>
