--- a/games/index.html
+++ b/games/index.html
@@ -63,14 +63,14 @@
 		<div class="project-div-singlecolumn">
 			<p>Since release, we've been proud to receive the following honors:</p>
 			<ul>
-				<li>The Game Awards:
+				<li>The Game Awards (2023):
 					<ul class="ul-forza-awards">
-						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/innovation-in-accessibility">Innovation in Accessibility (Nomination)</a></li>
-						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/best-sports-racing">Best Sports/Racing (Nomination)</a></li>
+						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/innovation-in-accessibility">Innovation in Accessibility Award</a></li>
+						<li><a class="decorated-links" target="_self" href="https://thegameawards.com/nominees/best-sports-racing">Best Sports/Racing Award</a></li>
 						
 					</ul>
 				</li>
-				<li>GAConf:
+				<li>GAConf (2023):
 					<ul class="ul-forza-awards">
 						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">AAA Excellence (Nomination)</a></li>
 						<li><a class="decorated-links" target="_self" href="https://www.gaconf.com/gaconf-awards-2023/">Best Physical/Mobility Accessibility (Nomination)</a></li>
